# booscheme

./: .gitignore  Makefile  booscheme.cpp  booscheme.h  closure.cpp  e-sheep.scm  environment.cpp  environment.h  input_port.cpp  interpreter.cpp  kipple-cc.scm  kipple.scm  output_port.cpp  primitive.cpp  procedure.cpp  symbol.cpp  test.cpp  utils.cpp
hoppy/: hop.py  lispy-cc.py
obsolete/: input_port.cpp  output_port.cpp  utils.cpp
reborn/: CMakeLists.txt  base_library.cpp  base_library.h  boo.cpp  boo.h  boo_objects.h  boo_types.h  boodebug.h  boolean.h  booscheme.h  character.h  closure.cpp  closure.h  continuation.cpp  continuation.h  empty.h  environment.cpp  environment.h  eof.h  eval.cpp  eval_cc.cpp  input_port.cpp  input_port.h  misc.h  null.h  number.cpp  number.h  object.h  output_port.cpp  output_port.h  pair.cpp  pair.h  primitive.cpp  primitive.h  primitive_call_cc.cpp  primitive_call_cc.h  primitive_cc.cpp  primitive_cc.h  procedure.h  string_t.h  (+10 more)
