cmake_minimum_required(VERSION 2.8)
project(booscheme)
add_executable(test test.cpp pair.cpp number.cpp symbol.cpp environment.cpp primitive.cpp primitive_cc.cpp primitive_call_cc.cpp closure.cpp input_port.cpp input_port.cpp output_port.cpp boo.cpp base_library.cpp eval_cc.cpp continuation.cpp syntax.cpp)
add_executable(test_eval_cc test_eval_cc.cpp pair.cpp number.cpp symbol.cpp environment.cpp primitive.cpp primitive_cc.cpp primitive_call_cc.cpp closure.cpp input_port.cpp input_port.cpp output_port.cpp boo.cpp base_library.cpp eval_cc.cpp continuation.cpp syntax.cpp)
add_executable(test_syntax test_syntax.cpp pair.cpp number.cpp symbol.cpp environment.cpp primitive.cpp primitive_cc.cpp primitive_call_cc.cpp closure.cpp input_port.cpp input_port.cpp output_port.cpp boo.cpp base_library.cpp eval_cc.cpp continuation.cpp syntax.cpp)
target_link_libraries(test gc)
target_link_libraries(test_eval_cc gc)
target_link_libraries(test_syntax gc)
